# persistent-gauge

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.drill  Dockerfile.migration  README.md  docker-compose.yml
benchmark/: benchmark.yaml  drill.sh
data/: Dockerfile  init_db.sql
grafana/: grafana.ini
grafana/dashboards/general/: PersistentGuage.json
migrations/2021-12-10-041640_initial/: down.sql  up.sql
prometheus/: prometheus.yml
scripts/: migration_run.sh
src/: lib.rs  main.rs  schema.rs
src/action/: gauge.rs  mod.rs
src/handler/: create_gauge.rs  decrement_gauge.rs  get_gauges.rs  increment_gauge.rs  mod.rs
src/model/: error.rs  gauge.rs  mod.rs  response.rs
src/operation/: config.rs  logger.rs  metric.rs  mod.rs  status.rs  tracer.rs
