[package]
name = "persistent-gauge"
version = "0.1.0"
authors = ["byblakeorriver"]
edition = "2018"

[dependencies]
# diesel ORM
diesel = { version = "1.4.8", features = ["mysql", "r2d2", "chrono"] }

#time
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.1"

# r2d2
r2d2 = "0.8.9"

# runtime
tokio = { version = "1.17.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }

#utility
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
derive_more = "0.99.17"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_repr = "0.1.7"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
lazy_static = "1.4.0"

#operational
axum = "0.4.8"
envy = "0.4.2"
opentelemetry = { version = "0.17.0", features = ["metrics"] }
opentelemetry-prometheus = "0.10.0"
prometheus = "0.13.0"

# logging
log = "0.4.14"
slog = "2.7.0"
slog-json = "2.6.0"
slog-async = "2.7.0"
slog-stdlog = "4.1.0"
slog-scope = "4.4.0"

[lib]
name = "persistent_gauge"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "persistent-gauge"
path = "src/main.rs"
